# Form16Extractor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ascii_options_comparison.py  cli.py  cli_demo.py  cross_document_structure_analyzer.py  demo_script.sh  form16_extracted.json  form16_extractor_tasks.txt  form16x_ascii_designs.py  pyproject.toml  requirements.txt  setup.py  setup.py.backup  taxedo  test_actual_form16.py  test_employee_extractor_real_docs.py
.github/workflows/: publish.yml  test.yml
form16_extractor/: configuration.py  error_handler.py  monitoring.py
form16_extractor/api/: __init__.py  tax_calculation_api.py
form16_extractor/config/: logging_config.py  settings.py
form16_extractor/consolidators/: __init__.py  multi_company_consolidator.py
form16_extractor/consolidators/interfaces/: validator_interface.py
form16_extractor/display/: colored_templates.py  display_templates.py
form16_extractor/exceptions/: __init__.py  consolidation_exceptions.py  core_exceptions.py  tax_calculation_exceptions.py
form16_extractor/extractors/: employee.py  enhanced_form16_extractor.py  form16_extractor.py
form16_extractor/extractors/base/: abstract_field_extractor.py  extraction_metrics.py  extraction_orchestrator.py  interfaces.py  table_scorer.py  table_scoring_engine.py  value_validator.py  zero_value_handler.py
form16_extractor/extractors/classification/: multi_category_classifier.py  part_a_router.py  part_b_router.py  routing_coordinator.py
form16_extractor/extractors/domains/deductions/: deductions_extractor.py
form16_extractor/extractors/domains/identity/: employee_extractor.py  employer_extractor.py  text_extractor.py
form16_extractor/extractors/domains/metadata/: metadata_extractor.py  quarterly_tds_extractor.py
form16_extractor/extractors/domains/salary/: amount_extractor.py  salary_coordinator.py  salary_extractor.py  (+1 more)
form16_extractor/extractors/mixins/: mixins_init_old.py
form16_extractor/integrators/: data_mapper.py
form16_extractor/models/: form16_models.py  value_objects.py
form16_extractor/pdf/: reader.py  simple_classifier.py  table_classifier.py
form16_extractor/progress/: progress_tracker.py
form16_extractor/tax_calculators/: TAX_CALCULATION_GUIDE.md  comprehensive_calculator.py  main_calculator.py
form16_extractor/tax_calculators/components/: hra_calculator.py  lta_calculator.py  section_89_relief.py
form16_extractor/tax_calculators/engines/: base_regime.py  old_regime.py
form16_extractor/tax_calculators/interfaces/: calculator_interface.py  regime_interface.py
form16_extractor/tax_calculators/rules/: __init__.py  json_rule_provider.py  year_specific_rule_provider.py
form16_extractor/utils/: json_builder.py  text_processing.py  validation.py
form16_extractor/validators/: business_rules.py
form16x/: __init__.py
form16x/form16_parser/: cli.py  dummy_generator.py
form16x/form16_parser/analyzers/: salary_breakdown_analyzer.py  tax_optimization_engine.py
form16x/form16_parser/api/: __init__.py  tax_calculation_api.py
form16x/form16_parser/commands/: __init__.py  base_command.py  batch_command.py  consolidate_command.py  extract_command.py  optimize_command.py
form16x/form16_parser/config/: logging_config.py
form16x/form16_parser/display/: __init__.py  cli_ascii_art.py  colored_templates.py  display_templates.py  rich_ui_components.py
form16x/form16_parser/extractors/: enhanced_form16_extractor.py  form16_extractor.py
form16x/form16_parser/integrators/: __init__.py  form16_tax_integrator.py
form16x/form16_parser/models/: salary_breakdown_models.py
form16x/form16_parser/pdf/: reader.py  simple_classifier.py
form16x/form16_parser/presentation/: __init__.py
form16x/form16_parser/progress/: __init__.py  progress_tracker.py
form16x/form16_parser/services/: __init__.py  batch_processing_service.py  consolidation_service.py  extraction_service.py  tax_calculation_service.py  tax_optimization_service.py  validation_service.py
form16x/form16_parser/tax_calculators/: TAX_CALCULATION_GUIDE.md  __init__.py  comprehensive_calculator.py  simple_tax_calculator.py
form16x/form16_parser/utils/: json_builder.py  table_utils.py  validation.py
form16x/form16_parser/validators/: business_rules.py
src/application/: __init__.py  form16_extractor.py
src/application/extractors/: __init__.py  identity_extractor.py
src/domain/: __init__.py  models.py
src/infrastructure/: __init__.py  pdf_processor.py
tests/: __init__.py
tests/unit/: test_models.py  test_models_new.py
tests/unit/cli/: test_cli_router.py
tests/unit/commands/: test_extract_command.py
tests/unit/config/: test_settings.py
tests/unit/consolidators/: test_multi_company_consolidator.py
tests/unit/extractors/: test_employee_extractor.py
tests/unit/interfaces/: test_calculator_interface.py
tests/unit/models/: __init__.py  test_form16_models.py
tests/unit/pdf/: test_reader_performance.py  test_reader_performance_minimal.py
tests/unit/progress/: test_progress_tracker.py
tests/unit/services/: test_tax_calculation_service.py  test_tax_calculation_service_minimal.py  test_tax_optimization_service.py
tests/unit/tax_calculators/: test_main_calculator.py  test_regime_engines.py
tests/unit/utils/: test_table_utils.py  test_text_processing.py  test_validation.py
(+57 files in other folders)
